# 24hc26_spacebattle

./: .gitignore  README.rst
documentation/: Makefile  compile-and-serve.sh  conf.py  guide_participants.rst  idee.rst  index.rst  protocole.rst  protocole_game.rst  protocole_general.rst  protocole_vessel.rst
presentation/: presentation.odp
server/: const.py  doc  game.py  index.html  main.py  msgs.py  position.py  pyproject.toml  universe.py  vessel.py
server/2dview/: index.html
server/game/: asteroid.py  embed_context.py  game.py  mine.py  notifyer.py  observer.py  position.py  radar.py  resource.py  torpedo.py  universe.py  vector.py  vessel.py
server/messages/: __init__.py  admin.py  game.py  misc.py  vessels.py
server/tests/: test_energy.py  test_farmable.py  test_hypervoxel_line.py  test_interactions.py  test_log.py  test_other.py  test_str.py  test_vector.py  utils.py
server/viewer/: index.html
server/webgl2view/: index.html
