[project]
name = "24hc26server"
version = "0.0.0"
description = "Server of 24hc26 game"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "jsonschema>=4.25.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
ipython = [
    "ipython",
    "nest_asyncio2",
]

[tool.setuptools]
py-modules = []
